--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
         
+        <link rel="icon" type="image/png" href="./src/imagens/pokeball.png">
         <link rel="stylesheet" href="./src/css/reset.css">
         <link rel="stylesheet" href="./src/css/estilos.css">
         <link rel="stylesheet" href="./src/css/scrollbar.css">
